--- a/WebsiteProjectCMart/Properties/launchSettings.json
+++ b/WebsiteProjectCMart/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:15816",
-      "sslPort": 44322
+      "applicationUrl": "http://localhost:18995",
+      "sslPort": 44327
     }
   },
   "profiles": {
-    "PotentialTraineeWebsite": {
+    "WebsiteProjectCMart": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7068;http://localhost:5068",
+      "applicationUrl": "https://localhost:7083;http://localhost:5083",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
