--- a/WebsiteProjectCMart/appsettings.json
+++ b/WebsiteProjectCMart/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=WORKSTATION\\SQLEXPRESS;Database=WebsiteDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
