--- a/WebsiteProjectCMart/appsettings.json
+++ b/WebsiteProjectCMart/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=WORKSTATION\\SQLEXPRESS;Database=WebsiteDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=WORKSTATION\\SQLEXPRESS;Database=WebsiteDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
