--- a/WebsiteProjectCarpetMart/appsettings.json
+++ b/WebsiteProjectCarpetMart/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebsiteProjectCarpetMart-0362DE6C-DE28-4372-9832-E44B0C063F62;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "WebsiteDatabase": "Server=WORKSTATION\\SQLEXPRESS;Database=WebsiteDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WebsiteDatabase": "Server=(localdb)\\mssqllocaldb;Database=WebsiteDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
